crates/lattice-placement/tests/ui/raw_etcd_store_constructor.stderr
error[E0624]: associated function `new` is private
 --> tests/ui/raw_etcd_store_constructor.rs:7:38
  |
7 |     let _store = EtcdPlacementStore::new(PlacementPrefix::new("/lattice/test"), client);
  |                                      ^^^ private associated function
  |
 ::: src/storage/etcd.rs
  |
  |     pub(crate) fn new(prefix: PlacementPrefix, client: C) -> Self {
  |     ------------------------------------------------------------- private associated function defined here
